--- a/.env
+++ b/.env
@@ -1,6 +1,2 @@
-DB_NAME=gatau
-DB_USER=gatau_owner
-DB_PASSWORD=npg_GoWc7jR1NupF
-DB_HOST=ep-delicate-credit-a58rkpls-pooler.us-east-2.aws.neon.tech
-DB_PORT=5432
-PORT=3000
+PORT = 5433
+PG_CONNECTION_STRING = postgresql://gatau_owner:npg_GoWc7jR1NupF@ep-delicate-credit-a58rkpls.us-east-2.aws.neon.tech/gatau?sslmode=require
