--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PORT = 5433
-PG_CONNECTION_STRING = postgresql://gatau_owner:npg_GoWc7jR1NupF@ep-delicate-credit-a58rkpls.us-east-2.aws.neon.tech/gatau?sslmode=require
+CONNECTIONSTRING=postgresql://gatau_owner:npg_GoWc7jR1NupF@ep-delicate-credit-a58rkpls.us-east-2.aws.neon.tech/gatau?sslmode=require
+PORT=3000
